<resources>
    <string name="app_name">Kaizoyu!</string>
    <string name="pause_video">Pause video</string>
    <string name="skip_intro">Skip intro</string>
    <string name="title_activity_video_player">FullscreenActivity</string>
    <string name="home_button">Home</string>
    <string name="schedule_button">Schedule</string>
    <string name="history_button">Favorites</string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_anime_details">AnimeDetails</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_a">a</string>
    <string name="change_language_of_video">Change language of video</string>
    <string name="anime_details_synopsis">Synopsis</string>
    <string name="anime_details_alternative_titles">Alternate Titles</string>
    <string name="fragment_anime_episodes_tip">Depending on the title of the show, you may find completely unrelated episodes from other shows, or from other seasons of the same show.\n\nE.g.: [Steins; Gate] will lead to results from both the original show and [Steins; Gate 0], the show\'s second season.</string>
    <string name="fragment_anime_episodes_item">Episode</string>
    <string name="fragment_settings_appearance">Appearance</string>
    <string name="fragment_settings_search">Search</string>
    <string name="fragment_settings_download">Download</string>
    <string name="fragment_settings_misc">Misc</string>
    <string name="fragment_schedule_tip">The times shown here have already been converted to your local timezone.</string>
    <string name="general_dont_remind_long">I got it, don\'t remind me again</string>
    <string name="schedule_description_floating_button">Jump to shows airing today</string>
    <string name="activity_details_tab1">Information</string>
    <string name="activity_details_tab2">Episodes</string>
    <string name="activity_main_search">Search</string>
    <string name="fragment_library_empty">Nothing to show here… yet. Go watch some anime and save your favorite shows here!</string>
    <string name="fragment_schedule_empty">Sorry, we found nothing here. This was most likely caused by an internet connection failure. Please try again.</string>
    <string name="fragment_episodes_empty">Nothing to show here… yet. This shows is either too old, is yet to air, or your internet connection has failed. Sorry for the inconvenience!</string>
    <string name="title_activity_licenses">LicensesActivity</string>
    <string name="title_activity_fullsearch">FullSearchActivity</string>
    <string name="main_search_hint">Search library....</string>
    <string name="quality">Quality</string>
    <string name="episode_long_press_title">Select an action for episode %d</string>
    <string name="episode_long_press_watched">Mark as watched</string>
    <string name="episode_long_press_unwatch">Remove watched state</string>
    <string name="downloading_update">Downloading update</string>
    <string name="new_update">New update available</string>
    <string name="update_version_change">Upgrading from v%s to v%s</string>
    <string name="update_choice_skip">Never</string>
    <string name="update_choice_later">Later</string>
    <string name="update_choice_install">Install</string>
    <string name="update_no_description">No description was included in this release.</string>
    <string name="update_rationale_title">We need your permission to install updates</string>
    <string name="update_rationale_description">We need your permission to install the update that was just downloaded. Without your permission, we won\'t be able to start the installation, and the process will be cancelled.</string>
    <string name="update_rationale_accept">Alright, do it</string>
    <string name="update_rationale_deny">Nope</string>
    <string name="update_rationale_toast">Alright, here we go.</string>
    <string name="update_cancel_permission">We cannot update the app without your permission. Going back…</string>
    <string name="update_error">Whoops, something went wrong while updating</string>
    <string name="update_cancel_title">You sure, bud?</string>
    <string name="update_cancel_description">You\'re about to cancel the update and go back. All download progress will be lost.</string>
    <string name="update_cancel_accept">Hell yeah</string>
    <string name="update_cancel_deny">I\'ll stay</string>
    <string name="update_already_latest">No updates available</string>
    <string name="search_history_icon_desc">Search history icon</string>
    <string name="anime_cover_image_desc">Anime cover image</string>
    <string name="favorite_button_desc">Favorite button</string>
    <string name="go_back_desc">Go back</string>
    <string name="tip_icon_desc">Tip icon</string>
    <string name="close_modal_button_desc">Close modal button</string>
    <string name="us_flag_desc">English title icon</string>
    <string name="romaji_title_icon_desc">Romaji title icon</string>
    <string name="jp_title_icon_desc">Japanese title icon</string>
</resources>