<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".details.gui.AnimeInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/materialCardViewFilledStyle"
                android:id="@+id/episode_card_button"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="?attr/colorSecondaryContainer"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="18dp"
            >
                <TextView
                        android:text="@string/anime_details_synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/lato_bold"
                        android:textSize="20sp"
                />
                <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/anime_synopsis"
                        android:fontFamily="@font/lato_regular"
                />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?attr/materialCardViewFilledStyle"
                android:id="@+id/materialCardView2"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toBottomOf="@+id/episode_card_button"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="?attr/colorSecondaryContainer"
        >
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="18dp"
            >
                <TextView
                        android:text="@string/anime_details_alternative_titles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="@font/lato_bold"
                        android:textSize="20sp"
                />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/title_us" android:visibility="gone"
                    tools:ignore="UseCompoundDrawables"
                >
                    <ImageView
                        android:src="@drawable/flag_us"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="40dp"
                        android:contentDescription="@string/us_flag_desc"
                    />
                    <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:id="@+id/anime_title_us"
                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/title_en_jp" android:visibility="gone"
                    tools:ignore="UseCompoundDrawables"
                >
                    <ImageView
                        android:src="@drawable/flag_us_jp"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="40dp"
                        android:contentDescription="@string/romaji_title_icon_desc"
                    />
                    <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:id="@+id/anime_title_enjp"
                    />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:id="@+id/title_jp" android:visibility="gone"
                    tools:ignore="UseCompoundDrawables"
                >
                    <ImageView
                        android:src="@drawable/flag_jp"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginEnd="40dp"
                        android:contentDescription="@string/jp_title_icon_desc"
                    />
                    <TextView
                        android:text=""
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:id="@+id/anime_title_jp"
                    />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>