<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anime_details_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.AnimeDetailsActivity"
    android:animateLayoutChanges="true"
>
    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_general_placeholder"
        android:contentDescription="@string/anime_cover_image_desc"
    />

    <View
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_item_upper_fade"
        android:id="@+id/upper_fade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <ImageView
        android:id="@+id/favorite_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_favorite"
        app:tint="@color/branding_accent"
        android:contentDescription="@string/favorite_button_desc"
    />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_new"
        app:tint="?attr/colorOnSurfaceVariant"
        android:contentDescription="@string/go_back_desc"
    />

    <View
        android:id="@+id/spacer_view"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="-14dp"
        android:background="@drawable/bg_rounded_upper"
        android:backgroundTint="?attr/colorSurface"
        app:layout_constraintTop_toBottomOf="@+id/cover_image"
    />

    <TextView
        android:id="@+id/anime_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/lato_black"
        android:text=""
        android:textColor="?attr/colorOnSurfaceVariant"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spacer_view"
    />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/poster_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        android:elevation="5dp"
        app:layout_constraintBottom_toTopOf="@+id/spacer_view"
        app:layout_constraintDimensionRatio="w,0.71:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cover_image"
        app:shapeAppearanceOverlay="@style/roundedImageView"
        app:srcCompat="@drawable/ic_general_placeholder"
    />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/informationTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anime_title"
    >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_details_tab1"
        />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_details_tab2"
        />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/informationViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informationTabLayout"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorSurface"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/loading_screen_overlay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back_new"
            app:tint="?attr/colorOnSurfaceVariant"
            android:contentDescription="@string/go_back_desc"
        />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_bar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:indeterminate="true"
            app:indicatorSize="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:trackCornerRadius="10dp"
            app:trackThickness="15dp"
            app:indicatorColor="@color/branding_accent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>